--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "LifeOS",
   "description": "Personal Operating System Dashboard",
   "start_url": "/",
-  "display": "standalone",
+  "display": "fullscreen", 
   "background_color": "#000000",
   "theme_color": "#000000",
   "orientation": "portrait",
